improved fallback, async error handling with authrouter, fixed endpoints, finished offer endpoint proto
